<resources>
    <string name="app_name">Space Station App</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_home">Stations</string>
    <string name="title_dashboard">Favori</string>
    <string name="preference_file_key">shared_pref</string>
    <string name="ugs">UGS:%1$s</string>
    <string name="eus">EUS:%1$s</string>
    <string name="ds">DS:%1$s</string>
    <string name="cant_be_empty">Bu Alan Bos Olamaz.</string>
    <string name="capacity_and_stock">%1$s/%2$s</string>
    <string name="item_eus">%1$sEUS</string>
    <string name="travel">Seyahat Et</string>
    <string name="favorites">Favoriler</string>
    <string name="favorite_list_is_empty">Favori listesi boş.</string>
    <string name="dagitilacak_puan">Dağıtılacak puan:</string>
    <string name="dayaniklilik">Dayanıklılık</string>
    <string name="hiz">Hız</string>
    <string name="kapasite">Kapasite</string>
    <string name="devam_et">devam et</string>
    <string name="loading">Yükleniyor…</string>
    <string name="gameOver">Görev Tamamlandı</string>
    <string name="your_ship_name">Uzay aracinin ismi</string>
</resources>