<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.ShipFragment">

    <LinearLayout
        android:id="@+id/ll_ship_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/margin_8"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_points_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/dagitilacak_puan"
                android:textSize="@dimen/text_size_35" />

            <TextView
                android:id="@+id/total_points_value_ship_fragment"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/rec_border"
                android:fontFamily="sans-serif-condensed"
                android:textSize="@dimen/text_size_35" />

        </LinearLayout>


        <View
            android:id="@+id/titleDividerNoCustom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_points_title_tv" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/contentLoadingProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:indeterminate="true"
            android:visibility="invisible"
            app:trackThickness="4dp" />

        <EditText
            android:id="@+id/ship_name_et_ship_fragment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/rec_border"
            android:hint="@string/your_ship_name"
            android:paddingStart="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--      damage_capacity      -->
        <TextView
            android:id="@+id/damage_capacity_tv_ship_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:text="@string/dayaniklilik"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <com.google.android.material.slider.Slider
            android:id="@+id/durability_slider_ship_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:stepSize="1"
            android:theme="@style/SliderTheme"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="13"
            app:labelBehavior="floating" />

        <!--      speed      -->
        <TextView
            android:id="@+id/speed_tv_ship_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:text="@string/hiz"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <com.google.android.material.slider.Slider
            android:id="@+id/speed_slider_ship_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:stepSize="1"
            android:theme="@style/SliderTheme"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="13"
            app:labelBehavior="floating" />

        <!--     capacity       -->
        <TextView
            android:id="@+id/capacity_tv_ship_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:text="@string/kapasite"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <com.google.android.material.slider.Slider
            android:id="@+id/capacity_slider_ship_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:stepSize="1"
            android:theme="@style/SliderTheme"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="13"
            app:labelBehavior="floating" />

        <Button
            android:id="@+id/continue_btn_ship_fragment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/rec_border"
            android:text="@string/devam_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_ship_fragment" />

    </LinearLayout>

</ScrollView>

